--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,7 @@
   grid-row: 8 span;
 }
 .App>.Main {
-  background-color: #FAF8F1;
+  background-color: #f5e4a9;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
