--- a/src/App.css
+++ b/src/App.css
@@ -57,3 +57,17 @@
   grid-column: 12 span;
   grid-row: 2 span;
 }
+
+.fade-up{
+  background-image: linear-gradient(#f5e4a9, #C58940);
+}
+
+.fade-down{
+  background-image: linear-gradient( #C58940, #f5e4a9);
+}
+.fade-right{
+  height: 100%;
+  width: 100%;
+  -webkit-box-shadow: inset 0 0 10px 20px #f5e4a9;
+  box-shadow: inset 0 0 10px 20px #f5e4a9;
+}
