--- a/src/Components/LayoutArea/Header/Header.css
+++ b/src/Components/LayoutArea/Header/Header.css
@@ -1,5 +1,5 @@
 .Header {
-    background-color: rgb(38, 89, 147);
+    /* background-color: rgb(38, 89, 147); */
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
