--- a/src/Components/LayoutArea/Main/Main.css
+++ b/src/Components/LayoutArea/Main/Main.css
@@ -1,5 +1,5 @@
 .Main {
-    background-color: rgb(137, 183, 245);
+    /* background-color: rgb(137, 183, 245); */
     display:flex;
     flex-direction: row;
     justify-content: center;
