--- a/src/index.css
+++ b/src/index.css
@@ -347,6 +347,11 @@ border: solid 2px #c7c7c7;
 .select-client-type{
   width: 200px;
   margin-top: 10px;
+  position: relative;
+  display: inline-block;
+  margin-bottom: 15px;
+  width: 100%;
+  border-radius: 5px;
 }
 
 .price-input{
