--- a/src/Components/LayoutArea/Header/Header.css
+++ b/src/Components/LayoutArea/Header/Header.css
@@ -6,10 +6,53 @@
     align-items: center;
 }
 
-.Header .couponIcon{
+.Header .couponIcon1{
     width: 250px;
     border-radius: 12%;
     margin-top: 10px;
 }
 
+.Header .couponIcon2{
+    width: 170px;
+    border-radius: 12%;
+    margin-top: 10px;
+}
+
+.flip-box {
+    background-color: transparent;
+    width: 300px;
+    height: 200px;
+    perspective: 1000px;
+  }
+  
+  .flip-box-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.8s;
+    transform-style: preserve-3d;
+  }
+  
+  .flip-box:hover .flip-box-inner {
+    transform: rotateY(180deg);
+  }
+  
+  .flip-box-front, .flip-box-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+  }
+  
+  .flip-box-front {
+    /* background-color: #bbb;
+    color: black; */
+  }
+  
+  .flip-box-back {
+    /* color: white; */
+    transform: rotateY(180deg);
+  }
 
