--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@
   --bg: #131A22;
   --color-primary: #000000;
   --color-secondary: #cbb08e;
+  --color-third:#214b6f;
   --bg-head: #131A22;
   --bg-main:  #7B8FA1;
   --bg-menu: #577187;
@@ -25,6 +26,7 @@
   --bg: #cbb08e;
   --color-primary: #282c34;
   --color-secondary: #7B8FA1;
+  --color-third:#4b4632;
   --bg-head: #cbb08e;
   --bg-main:  #afa47b;
   --bg-menu: #e9d4b0;
